--- a/wrangler.toml
+++ b/wrangler.toml
@@ -11,6 +11,9 @@ custom_domain = true
 pattern = "ava.game.naver.com.singa.wayme.cloud"
 custom_domain = true
 [[routes]]
+pattern = "df.game.naver.com.singa.wayme.cloud"
+custom_domain = true
+[[routes]]
 pattern = "blog.webex.com.singa.wayme.cloud"
 custom_domain = true
 [[routes]]
@@ -38,9 +41,6 @@ custom_domain = true
 pattern = "zoomcares.zoom.us.singa.wayme.cloud"
 custom_domain = true
 [[routes]]
-pattern = "graph.facebook.com.singa.wayme.cloud"
-custom_domain = true
-[[routes]]
 pattern = "www.help.tinder.com.singa.wayme.cloud"
 custom_domain = true
 [[routes]]
@@ -54,9 +54,6 @@ pattern = "api.ovo.id.singa.wayme.cloud"
 custom_domain = true
 [[routes]]
 pattern = "cdnodeb.visionplus.singa.wayme.cloud"
-custom_domain = true
-[[routes]]
-pattern = "104.26.6.171.singa.wayme.cloud"
 custom_domain = true
 [[routes]]
 pattern = "app.gopay.co.id.singa.wayme.cloud"
