--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,87 +1,24 @@
-name = "singa" # todo
+name = "asur" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "singa.wayme.cloud"
+pattern = "wayme.cloud"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.singa.wayme.cloud"
+pattern = "df.game.naver.com.asur.wayme.cloud"
 custom_domain = true
 [[routes]]
-pattern = "df.game.naver.com.singa.wayme.cloud"
+pattern = "ava.game.naver.com.asur.wayme.cloud"
 custom_domain = true
 [[routes]]
-pattern = "blog.webex.com.singa.wayme.cloud"
+pattern = "quiz.staging.vidio.com.asur.wayme.cloud"
 custom_domain = true
 [[routes]]
-pattern = "www.sushiroll.co.id.singa.wayme.cloud"
-custom_domain = true
-[[routes]]
-pattern = "blog.sushiroll.co.id.singa.wayme.cloud"
-custom_domain = true
-[[routes]]
-pattern = "cdn.appsflyer.com.singa.wayme.cloud"
-custom_domain = true
-[[routes]]
-pattern = "investor.fb.com.singa.wayme.cloud"
-custom_domain = true
-[[routes]]
-pattern = "investor.spotify.com.singa.wayme.cloud"
-custom_domain = true
-[[routes]]
-pattern = "www.joox.com.singa.wayme.cloud"
-custom_domain = true
-[[routes]]
-pattern = "quiz.staging.vidio.com.singa.wayme.cloud"
-custom_domain = true
-[[routes]]
-pattern = "zoomcares.zoom.us.singa.wayme.cloud"
-custom_domain = true
-[[routes]]
-pattern = "www.help.tinder.com.singa.wayme.cloud"
-custom_domain = true
-[[routes]]
-pattern = "poe.garena.com.singa.wayme.cloud"
-custom_domain = true
-[[routes]]
-pattern = "games.axis.co.id.singa.wayme.cloud"
-custom_domain = true
-[[routes]]
-pattern = "api.ovo.id.singa.wayme.cloud"
-custom_domain = true
-[[routes]]
-pattern = "cdnodeb.visionplus.singa.wayme.cloud"
-custom_domain = true
-[[routes]]
-pattern = "app.gopay.co.id.singa.wayme.cloud"
-custom_domain = true
-[[routes]]
-pattern = "go.appsflyer.com.singa.wayme.cloud"
-custom_domain = true
-[[routes]]
-pattern = "devsupport.webex.com.singa.wayme.cloud"
-custom_domain = true
-[[routes]]
-pattern = "edu.ruangguru.com.singa.wayme.cloud"
-custom_domain = true
-[[routes]]
-pattern = "creativeservices.netflix.com.singa.wayme.cloud"
-custom_domain = true
-[[routes]]
-pattern = "npca.netflix.com.singa.wayme.cloud"
-custom_domain = true
-[[routes]]
-pattern = "gw.ruangguru.com.singa.wayme.cloud"
+pattern = "api.instagram.com.asur.wayme.cloud"
 custom_domain = true
 
 [vars]
-# UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
-# PROXYIP = "1.2.3.4"
-# DNS_RESOLVER_URL = "https://cloudflare-dns.com/dns-query"
-# NODE_ID = "1"
-# API_TOKEN = "example_dev_token"
-# API_HOST = "api.v2board.com"
 UUID = "530d3f03-06ae-4c8a-9edf-cab933f869d2"
