--- a/.github/workflows/cf.yml
+++ b/.github/workflows/cf.yml
@@ -54,7 +54,7 @@ env:
 jobs:
   deploy:
     name: 🚀 Deploy worker
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     timeout-minutes: 60
     steps:
       - name: Checkout
