--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   create_branches:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     name: "🌲 Create and push branches"
     env:
       EMAIL: ${{ secrets.GH_EMAIL }}
