--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   sync_branches:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     name: "🔄 Sync branches with main"
     env:
       EMAIL: ${{ secrets.GH_EMAIL }}
