--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,19 +5,22 @@ name = "asur" # todo
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "wayme.cloud"
+pattern = "waime.tech"
 custom_domain = true
 [[routes]]
-pattern = "df.game.naver.com.asur.wayme.cloud"
+pattern = "df.game.naver.com.waime.tech"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.asur.wayme.cloud"
+pattern = "ava.game.naver.com.waime.tech"
 custom_domain = true
 [[routes]]
-pattern = "quiz.staging.vidio.com.asur.wayme.cloud"
+pattern = "quiz.staging.vidio.com.waime.tech"
 custom_domain = true
 [[routes]]
-pattern = "api.instagram.com.asur.wayme.cloud"
+pattern = "api.instagram.com.waime.tech"
+custom_domain = true
+[[routes]]
+pattern = "support.zoom.us.waime.tech"
 custom_domain = true
 
 [vars]
