--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,22 +5,22 @@ name = "asur" # todo
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "sg.waime.tech"
+pattern = "wayme.cloud"
 custom_domain = true
 [[routes]]
-pattern = "df.game.naver.com.waime.tech"
+pattern = "df.game.naver.com.wayme.cloud"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.waime.tech"
+pattern = "ava.game.naver.com.wayme.cloud"
 custom_domain = true
 [[routes]]
-pattern = "quiz.staging.vidio.com.waime.tech"
+pattern = "quiz.staging.vidio.com.wayme.cloud"
 custom_domain = true
 [[routes]]
-pattern = "api.instagram.com.waime.tech"
+pattern = "api.instagram.com.wayme.cloud"
 custom_domain = true
 [[routes]]
-pattern = "support.zoom.us.waime.tech"
+pattern = "support.zoom.us.wayme.cloud"
 custom_domain = true
 
 [vars]
